--- a/report_exercise3/report.tex
+++ b/report_exercise3/report.tex
@@ -22,10 +22,7 @@
 
 \begin{figure}[ht!]
   \centering
-  \framebox[\linewidth]{
-    \rotatebox{30}{Insert your figure here.} 
-  }
-  %\includegraphics[width=1.0\linewidth]{your filename here}
+  \includegraphics[width=1.0\linewidth]{timing_submission.png}
   \caption{Simulation screenshot for Listing~\ref{lst:asmnofwd}.}
   \label{fig:sim}
 \end{figure}
