--- a/report_exercise4/report.tex
+++ b/report_exercise4/report.tex
@@ -6,10 +6,10 @@
 % enter your data here
 \groupno{?}
 \authors{
-  Vorname Nachname, Matr. Nr. 0123456 \par
-  {\small e0123456@student.tuwien.ac.at} \par
-  Vorname Nachname, Matr. Nr. 0123456 \par
-  {\small e0123456@student.tuwien.ac.at}
+  Klaus Botschen, Matr. Nr. 8625499 \par
+  {\small klaus.botschen@student.tuwien.ac.at} \par
+  Manuel Fischer, Matr. Nr. 11905171 \par
+  {\small manuel.fischer@tuwien.ac.at}
 }
 
 
