report and cleanup of software folder

--- a/report_exercise4/report.tex
+++ b/report_exercise4/report.tex
@@ -4,7 +4,7 @@
 \exercise{Exercise IV}
 
 % enter your data here
-\groupno{?}
+\groupno{11}
 \authors{
   Klaus Botschen, Matr. Nr. 8625499 \par
   {\small klaus.botschen@student.tuwien.ac.at} \par
