--- a/report_exercise4/task1.tex
+++ b/report_exercise4/task1.tex
@@ -1,6 +1,6 @@
 \begin{figure}[ht!]
-	\dummyimage
-	%\includegraphics[width=1.0\linewidth]{your filename here}
+	%\dummyimage
+	\includegraphics[width=1.0\linewidth]{exe4task1.png}
 	\caption{Simulation screenshot for Listing~\ref{lst:asmfwd}.}
 	\label{fig:sim1}
 \end{figure}
