--- a/report_exercise4/task3.tex
+++ b/report_exercise4/task3.tex
@@ -5,29 +5,36 @@
 	\toprule
 	                     & LC Combinationals & LC Registers & Memory Bits \\
 	\midrule
-	Fetch Stage          &  82          & 16     &  0        \\
-	Decode Stage         &  165         & 47     &  0        \\
-	-- Register File     &  149         & 162    &  2048      \\
-	Execute Stage        &  336         & 152    &  0          \\
+	Fetch Stage          &  83          & 16     &  0        \\
+	Decode Stage         &  443         & 209    &  2048     \\
+	-- Register File     &  232         & 162    &  2048      \\
+	Execute Stage        &  1177        & 152    &  0          \\
 	-- ALU               &  696         & 0      &  0         \\
-	Memory Stage         &  88          & 113    &  0          \\
-	-- Memory Unit       &  85          & 0      &  0          \\
-	Write-Back Stage     &  87          & 88     &  0          \\
-	Forwarding Unit      &  15          & 0      &  0           \\
-	Control Unit         &              &        &             \\
+	-- Forwarding Unit   &  10          & 0      &  0           \\
+	Memory Stage         &  290         & 113    &  0          \\
+	-- Memory Unit       &  107         & 0      &  0          \\
+	Write-Back Stage     &  106         & 88     &  0          \\
+	Control Unit         &  24          & 20     &  0          \\
+	Cache                &  636         & 380    &  0          \\
 	\cmidrule{1-4}
-	Sum                  &              &        &             \\
+	Sum (core\_inst)     &  2515        & 978    &  2048       \\
 \bottomrule
 \end{tabular}
 \end{table}
 
 \begin{qa}
 	\question{What is the maximum frequency of your design?}
-	\answer{92MHz with aggressive optimization at 85°C; with balanced mode $f_{max}=84.36MHz$.}
+	\answer{According to the compilation report, $f_{max} = 73.07MHz$ at 85°C with
+	performance optimization turned on. When the critical path is excluded (see
+	next answer) the new $f_{max} = 90.19MHz$.}
 	\question{Where is the critical path of your design?}
-	\answer{The critical path is mostly due to the forwarding, e.g.
-	from WB wb\_next register via the EXEC forwarding mux through the
+	\answer{The critical path is the forwarding data path,
+	from data memory through MEMU and MEM via the EXEC forwarding mux through the
 	ALU bit shift combinatorial logic finally to the alu\_next register
+	in the MEM stage. BUT when this data path is activated, a stall is asserted
+	by CTRL, so actually this path is not critical. When it is excluded,
+	the next critical path is from the input register of EXEC via the FWD logic and aluB mux
+	through the ALU bit shift logic to the alu\_next register
 	in the MEM stage.}
 \end{qa}
 
