--- a/report_exercise4/task2.tex
+++ b/report_exercise4/task2.tex
@@ -1,7 +1,7 @@
 \begin{figure}[ht!]
 	\centering
-	\dummyimage
-	%\includegraphics[width=1.0\linewidth]{your filename here}
+	%\dummyimage
+	\includegraphics[width=1.0\linewidth]{exe4task2.png}
 	\caption{Simulation screenshot for Listing~\ref{lst:asmbds}.}
 	\label{fig:sim2}
 \end{figure}
